// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`youtube Invalid start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"0\\"></amp-youtube>
    </p>
  </section>
</article>"
`;

exports[`youtube Short link youtube 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"0\\"></amp-youtube>
    </p>
  </section>
</article>"
`;

exports[`youtube Short link youtube with start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"5\\"></amp-youtube>
    </p>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"60\\"></amp-youtube>
    </p>
  </section>
</article>"
`;

exports[`youtube Simple youtube 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"0\\"></amp-youtube>
    </p>
  </section>
</article>"
`;

exports[`youtube Youtube with start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"8\\"></amp-youtube>
    </p>
    <p>
      <amp-youtube data-videoid=\\"YJ5q8Wrkbdw\\" layout=\\"responsive\\" width=\\"480\\" height=\\"270\\" data-param-start=\\"8\\"></amp-youtube>
    </p>
  </section>
</article>"
`;
